--- a/fifteen.html
+++ b/fifteen.html
@@ -26,6 +26,9 @@
           alt="Valid CSS"
         />
       </a>
+      <a href="https://validator.w3.org/check/referer">
+        <img src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML" />
+      </a>
     </div>
     <script src="fifteen.js"></script>
   </body>
