--- a/fifteen.html
+++ b/fifteen.html
@@ -17,17 +17,20 @@
       <button id="shuffle">Shuffle</button>
     </div>
     <div class="validators">
-      <a href="https://validator.w3.org/check/referer">
+      <a href="https://validator.w3.org/">
         <img src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML" />
       </a>
-      <a href="https://jigsaw.w3.org/css-validator/check/referer">
+      <a href="https://jigsaw.w3.org/css-validator/">
         <img
           src="https://jigsaw.w3.org/css-validator/images/vcss"
           alt="Valid CSS"
         />
       </a>
-      <a href="https://validator.w3.org/check/referer">
-        <img src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML" />
+      <a href="https://www.jslint.com/">
+        <img
+          src="http://www.cs.washington.edu/education/courses/cse190m/09sp/images/jslint.png"
+          alt="Valid JS"
+        />
       </a>
     </div>
     <script src="fifteen.js"></script>
