Added extra features as comment

--- a/fifteen.html
+++ b/fifteen.html
@@ -59,3 +59,11 @@
     <script src="fifteen.js"></script>
   </body>
 </html>
+
+<!-- 
+    Extra Features Implemented: 
+    - End of game notification
+    - Ability to slide multiple squares at once
+    - Animations and/or transitions
+    - Time and moves
+-->
