Added validators images

--- a/fifteen.html
+++ b/fifteen.html
@@ -40,19 +40,13 @@
 
     <div class="validators">
       <a href="https://validator.w3.org/check/referer">
-        <img src="https://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML" />
+        <img src="html.png" alt="Valid XHTML" />
       </a>
       <a href="https://jigsaw.w3.org/css-validator/check/referer">
-        <img
-          src="https://jigsaw.w3.org/css-validator/images/vcss"
-          alt="Valid CSS"
-        />
+        <img src="css.png" alt="Valid CSS" />
       </a>
       <a href="https://www.jslint.com/">
-        <img
-          src="http://www.cs.washington.edu/education/courses/cse190m/09sp/images/jslint.png"
-          alt="JavaScript Lint"
-        />
+        <img src="jslint.png" alt="JavaScript Lint" />
       </a>
     </div>
 
